@@ -4,6 +4,7 @@
 
 - Optimized LDAP synchronization for large directories
 - Added NXSL API for manipulating object geolocation
+- Fixed bug that allows to crash server remotely by sending garbage to client connector port
 - Android Console:
 	- Updated ACRA library: now crash reports are sent via e-mail (will use the app installed on device to send mail)
 	- Fixed bug in action bar commands: disconnect and exit sometimes wasn't working
